# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("../../../config.gni")

SUBSYSTEM_DIR = "//foundation/communication/ipc"
IPC_CORE_ROOT = "$SUBSYSTEM_DIR/ipc/native"
IPC_TEST_ROOT = "$SUBSYSTEM_DIR/test"

ohos_shared_library("ipc_test_helper") {
  visibility = [ "$SUBSYSTEM_DIR/*" ]
  include_dirs = [
    "include",
    "$IPC_CORE_ROOT/c/adapter/access_token/include",
  ]

  sources = [
    "./src/assist_test_service.cpp",
    "./src/foo_service.cpp",
    "./src/ipc_test_helper.cpp",
    "./src/test_capi_skeleton.cpp",
    "./src/test_service.cpp",
    "./src/test_service_client.cpp",
    "./src/test_service_death_recipient.cpp",
    "./src/test_service_proxy.cpp",
    "./src/test_service_stub.cpp",
  ]

  if (ipc_feature_freeze_enabled) {
    defines = [ "FREEZE_PROCESS_ENABLED" ]
  }

  configs = [
    "$IPC_TEST_ROOT:ipc_test_config",
    "$SUBSYSTEM_DIR/config:ipc_util_config",
  ]

  deps = [
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api:ipc_capi",
    "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_single:ipc_single_test",
  ]

  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]

  part_name = "ipc"
  subsystem_name = "communication"
}

ohos_executable("ipc_server_test") {
  sources = [ "./src/main_server.cpp" ]

  configs = [
    "$SUBSYSTEM_DIR/config:ipc_util_config",
    "$IPC_TEST_ROOT:ipc_test_config",
  ]

  deps = [
    ":ipc_test_helper",
    "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_single:ipc_single_test",
  ]

  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]

  part_name = "ipc"
  subsystem_name = "communication"
}

ohos_executable("ipc_client_test") {
  sources = [ "./src/main_client.cpp" ]

  configs = [
    "$SUBSYSTEM_DIR/config:ipc_util_config",
    "$IPC_TEST_ROOT:ipc_test_config",
  ]

  deps = [
    ":ipc_test_helper",
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api:ipc_capi",
    "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_single:ipc_single_test",
  ]

  if (ipc_feature_freeze_enabled) {
    defines = [ "FREEZE_PROCESS_ENABLED" ]
  }

  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]

  part_name = "ipc"
  subsystem_name = "communication"
}

ohos_shared_library("ipc_test_helper_extra") {
  visibility = [ "$SUBSYSTEM_DIR/*" ]
  include_dirs = [
    "include",
    "$IPC_CORE_ROOT/c/adapter/access_token/include",
  ]

  sources = [
    "./src/assist_test_service.cpp",
    "./src/foo_service.cpp",
    "./src/ipc_test_helper.cpp",
    "./src/test_capi_skeleton.cpp",
    "./src/test_service.cpp",
    "./src/test_service_client.cpp",
    "./src/test_service_death_recipient.cpp",
    "./src/test_service_proxy.cpp",
    "./src/test_service_stub.cpp",
  ]

  cflags = [ "-DIPCSERVERTESTEXTRA" ]

  configs = [
    "$IPC_TEST_ROOT:ipc_test_config",
    "$SUBSYSTEM_DIR/config:ipc_util_config",
  ]

  if (ipc_feature_freeze_enabled) {
    defines = [ "FREEZE_PROCESS_ENABLED" ]
  }

  deps = [
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api:ipc_capi",
    "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_single:ipc_single_test",
  ]

  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]

  part_name = "ipc"
  subsystem_name = "communication"
}

ohos_executable("ipc_server_test_extra") {
  sources = [ "./src/main_server.cpp" ]

  configs = [
    "$SUBSYSTEM_DIR/config:ipc_util_config",
    "$IPC_TEST_ROOT:ipc_test_config",
  ]

  deps = [
    ":ipc_test_helper_extra",
    "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_single:ipc_single_test",
  ]

  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]

  part_name = "ipc"
  subsystem_name = "communication"
}

###############################################################################
group("IPCTestAssistance") {
  testonly = true
  deps = [
    ":ipc_client_test",
    ":ipc_server_test",
    ":ipc_server_test_extra",
    ":ipc_test_helper",
    ":ipc_test_helper_extra",
  ]
}
###############################################################################
