# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../config.gni")

group("ipc_lite_fuzztest") {
  testonly = true
  if (ipc_feature_test_enabled) {
    deps = [
      "getfeaturesize_fuzzer:GetFeatureSizeFuzzTest",
      "getrpcfeatureack_fuzzer:GetRpcFeatureAckFuzzTest",
      "gettokenfromdata_fuzzer:GetTokenFromDataFuzzTest",
      "isatenable_fuzzer:IsATEnableFuzzTest",
      "isfeatureack_fuzzer:IsFeatureAckFuzzTest",
      "setfeaturetransdata_fuzzer:SetFeatureTransDataFuzzTest",
    ]
  }
}
