# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../config.gni")

SUBSYSTEM_DIR = "../../../"
MODULE_OUTPUT_PATH = "ipc/rpc"

ohos_moduletest("rpc_client_test") {
  module_out_path = MODULE_OUTPUT_PATH
  include_dirs = [
    "include",
    "${SUBSYSTEM_DIR}/utils/include",
    "${SUBSYSTEM_DIR}/dbinder/dbinder_service/include",
  ]
  sources = [
    "src/rpc_client_test.cpp",
    "src/rpc_test_service_death_recipient.cpp",
    "src/rpc_test_service_proxy.cpp",
  ]
  configs = [
    "$SUBSYSTEM_DIR/config:dsoftbus_header_deps_config",
    "$SUBSYSTEM_DIR/config:ipc_util_config",
  ]

  deps = [ "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_core:ipc_core" ]
  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]
}

ohos_moduletest("rpc_server_test") {
  module_out_path = MODULE_OUTPUT_PATH
  include_dirs = [
    "include",
    "${SUBSYSTEM_DIR}/utils/include",
    "${SUBSYSTEM_DIR}/dbinder/dbinder_service/include",
  ]
  sources = [
    "src/rpc_server_test.cpp",
    "src/rpc_test_service_death_recipient.cpp",
    "src/rpc_test_service_proxy.cpp",
    "src/rpc_test_service_stub.cpp",
  ]
  configs = [ "$SUBSYSTEM_DIR/config:ipc_util_config" ]

  deps = [ "$SUBSYSTEM_DIR/interfaces/innerkits/ipc_core:ipc_core" ]
  external_deps = [
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("rpcModuletest") {
  testonly = true
  if (ipc_feature_test_enabled) {
    deps = [
      ":rpc_client_test",
      ":rpc_server_test",
    ]
  }
}

###############################################################################

