# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../config.gni")

SUBSYSTEM_DIR = "//foundation/communication/ipc"
IPC_TEST_ROOT = "$SUBSYSTEM_DIR/test"

config("ipc_test_config") {
  include_dirs = [
    "$IPC_TEST_ROOT/auxiliary/native/include",
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/ipc/native/src/core/dbinder/include",
    "$SUBSYSTEM_DIR/ipc/native/src/core/framework/include",
    "$SUBSYSTEM_DIR/ipc/native/src/core/invoker/include",
    "$SUBSYSTEM_DIR/interfaces/innerkits/c_api/include",
  ]
}

#################################group#########################################
group("ipc_lite_unittest") {
  testonly = true
  if (ipc_feature_test_enabled) {
    deps = [
      "adapter:ipc_lite_adapter_unittest",
      "ipc:ipc_lite_ipc_unittest",
      "rpc:ipc_lite_rpc_unittest",
    ]
  }
}
###############################################################################
